src/components/Sidebar.css
.sidebar-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  position: fixed;
  border: none;
  min-width: 15vw;
  top: 100px;
  right: 30px;
  z-index: 2;
  gap: 1em;
  mix-blend-mode: difference;
}

.sidebar-contact {
  background-color: white;
  border-radius: 50px;
  padding: 1.5em 0.5em;
  display: flex;
  justify-content: center;
  gap: 1.5em;
  width: 80%;
  max-width: 190px;
}

.sidebar-contact i:hover {
  transform: scale(1.2);
  transition: 0.1s ease-in-out;
  cursor: pointer;
}

.sidebar {
  background-color: white;
  border: none;
  height: calc(50vh - 100px);
  min-width: 15vw;
  top: 100px;
  right: 30px;
  padding: 2em;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  mix-blend-mode: difference;
  border-radius: 10px;
}

.sidebar ul {
  width: 90%;
}

.none {
  display: none;
}

.sidebar-container.open {
  opacity: 1;
  animation: fadeIn 0.2s;
}

.sidebar-container.closed {
  right: 0px;
  opacity: 0;
  animation: fadeOut 0.2s;
  display: none;
}

@keyframes fadeIn {
  0% {
    opacity: 0;
    right: -10px;
  }
  100% {
    opacity: 1;
    right: 30px;
  }
}

@keyframes fadeOut {
  0% {
    opacity: 1;
    right: 30px;
  }
  100% {
    opacity: 0;
    right: -10px;
  }
}

@media only screen and (max-width: 600px) {
  .sidebar {
    width: calc(90vw - 30px);
    box-shadow: 3px 7px 23px -5px rgba(0, 0, 0, 0.75);
    -webkit-box-shadow: 3px 7px 23px -5px rgba(0, 0, 0, 0.75);
    -moz-box-shadow: 3px 7px 23px -5px rgba(0, 0, 0, 0.75);
  }

  .sidebar-contact {
    box-shadow: 3px 7px 23px -5px rgba(0, 0, 0, 0.75);
    -webkit-box-shadow: 3px 7px 23px -5px rgba(0, 0, 0, 0.75);
    -moz-box-shadow: 3px 7px 23px -5px rgba(0, 0, 0, 0.75);
  }

  .sidebar-container {
    width: calc(90vw - 30px);
    mix-blend-mode: normal;
  }
}

